Updated history pages

--- a/vertical-slice/010101-activity-0101.html
+++ b/vertical-slice/010101-activity-0101.html
@@ -18,14 +18,14 @@
     <div class="container ems-container-fluid">
         <div class="card">
             <div class="card-header panel-heading-lt">
-                <i class="fa fa-book card-header-icon">Government</i>
+                <i class="fa fa-book card-header-icon" aria-hidden="true"></i> Government
             </div>
             <div class="card-body">
-                <h4>Ancient Greece & Rome</h4>
+                <h4>Ancient Greece and Rome</h4>
                 <p>American government was greatly influenced by Ancient Greece and Rome. Many of the government structures
                     of the Unites States mirror those from both Greece and Rome.
                 </p>
-                <p>Directions: Please watch the following presentation and video before completing the embedded graphic organizer.</p>
+                <p>Directions: Please watch the following presentation before completing the embedded graphic organizer.</p>
                 <p>
                     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQO7EIKhRbTMSQ5XqY2JdIV5yEA-drPlHoarfAVcH218Lh2-S7_jggAwiAHRRlzE_Eg5dOTCFRQhmH-/embed?start=false&loop=true&delayms=5000"
                         frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
