Updated Unit1 - Graphic Organizers

--- a/vertical-slice/010101-activity-0101.html
+++ b/vertical-slice/010101-activity-0101.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-        1.0.2 - Activity 1-1: Graphic Organizer
+        1.0.2 - Activity 1-1: Government
     </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous" />
@@ -17,7 +17,7 @@
     <!-- In Canvas, remove the "container" class -->
     <div class="container ems-container-fluid">
         <div class="card">
-            <div class="card-header panel-heading-lt">
+            <div class="card-header panel-heading">
                 <i class="fa fa-book card-header-icon" aria-hidden="true"></i> Government
             </div>
             <div class="card-body">
