--- a/vertical-slice/010100-intro.html
+++ b/vertical-slice/010100-intro.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-        Ancient Greece & Rome: Overview
+        Impact of Ancient Greece & Rome: Overview
     </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous" />
@@ -47,7 +47,7 @@
                 </div>
             </div>
         </div>
-        <!--====  End of Objectives Snippet  ====-->
+        <!--====  End of Learning Target Snippet  ====-->
         <!--========================================
     =            Lesson Objectives      =
     =========================================-->
@@ -70,13 +70,13 @@
 
             </div>
         </div>
-        <!--====  End of Prior Knowledge Snippet  ====-->
+        <!--====  End of Lesson Objectives Snippet  ====-->
         <!--========================================
     =       Lesson Activities     =
     =========================================-->
         <div class="card">
-            <div class="card-header panel-heading-pk">
-                <i class="fa fa-puzzle-piece card-header-icon" aria-hidden="true"></i> Lesson Activities
+            <div class="card-header panel-heading">
+                <i class="fa fa-book card-header-icon" aria-hidden="true"></i> Lesson Activities
             </div>
             <div class="card-body">
                 <div class="row">
