continued updating US History VS

--- a/vertical-slice/010108-activity-0501.html
+++ b/vertical-slice/010108-activity-0501.html
@@ -50,9 +50,9 @@
                                 establish governments which are representative of the people being governed.</p>
                         </div>
                     </div>
-                    <hr style="width:50%">
-                    <p><strong>Directions:</strong> After reviewing the following videos and presentation on Aristotle and
-                        Rousseau, please complete the drag and drop comparison activity.</p>
+                    <hr>
+                    <p>Directions: After reviewing the following videos and presentation on Aristotle and Rousseau, please
+                        complete the drag and drop comparison activity.</p>
                     <div class="row">
                         <div class="col-md-6">
                             <h4>
@@ -76,14 +76,16 @@
 
                         </div>
                     </div>
-                    <hr style="width:50%">
+                    <hr>
+
                     <div class="embed-responsive embed-responsive-16by9">
 
                         <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTN4ftSnGuXUC7Y5d4kgl-3gbefbIByuBthYA7A9jbkRmuGmjPqmtcO0CbmV7XSxhlmFzwA6KA5HX3d/embed?start=false&loop=false&delayms=3000"
                             frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
                     </div>
-                    <hr style="width:50%">
+                    <hr>
+
                     <h4>Aristotle and Rousseau: Drag and Drop Activity</h4>
                     <div class="embed-responsive embed-responsive-4by3">
                         <iframe src="https://storage.googleapis.com/emspmg/U.S.-History/Lesson1.0_Taking_Perspectives_DD/index.html" frameborder="0"
