--- a/vertical-slice/010109-activity-0601.html
+++ b/vertical-slice/010109-activity-0601.html
@@ -30,6 +30,10 @@
                     <p>The following page will provide you a brief review of the concepts covered in this lesson. When it’s
                         time to study for your Unit 1 test, make sure to look over this review.
                     </p>
+                    <p>Directions: Please review all videos and presentations from both <a href="https://emspmg.instructure.com/courses/118/quizzes/2594?module_item_id=80799"
+                            target="_blank">Activity 4</a> and <a href="https://emspmg.instructure.com/courses/118/assignments/3972?module_item_id=80802"
+                            target="_blank">Activity 5</a> before completing the check for understanding.</p>
+                    </p>
 
 
 
