--- a/vertical-slice/010101-activity-0101.html
+++ b/vertical-slice/010101-activity-0101.html
@@ -25,7 +25,9 @@
                 <p>American government was greatly influenced by Ancient Greece and Rome. Many of the government structures
                     of the Unites States mirror those from both Greece and Rome.
                 </p>
-                <p>Directions: Please watch the following presentation before completing the embedded graphic organizer.</p>
+                <p>Directions: Please watch the following presentation before completing the embedded graphic organizer.
+                    To open up your own copy of the graphic organizer, please click "1.0.2 - Activity 1-1: Government" below
+                    the presentation.</p>
                 <p>
                     <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQO7EIKhRbTMSQ5XqY2JdIV5yEA-drPlHoarfAVcH218Lh2-S7_jggAwiAHRRlzE_Eg5dOTCFRQhmH-/embed?start=false&loop=true&delayms=5000"
                         frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
